compiler-all/no.12/source/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> operation
Rule 6     statement -> print
Rule 7     statement -> modification
Rule 8     statement -> iF
Rule 9     statement -> whilE
Rule 10    statement -> for
Rule 11    statement -> break
Rule 12    break -> BREAK statements
Rule 13    break -> BREAK
Rule 14    for -> FOR ( operation ; condition ; operation ) { statements }
Rule 15    condition -> VARIABLE > VARIABLE
Rule 16    condition -> VARIABLE < VARIABLE
Rule 17    condition -> VARIABLE > NUMBER
Rule 18    condition -> VARIABLE < NUMBER
Rule 19    condition -> VARIABLE < = VARIABLE
Rule 20    condition -> VARIABLE [ factor ] > VARIABLE
Rule 21    condition -> VARIABLE [ factor ] < VARIABLE
Rule 22    iF -> IF ( condition ) { statements }
Rule 23    iF -> IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
Rule 24    whilE -> WHILE ( condition ) { statements }
Rule 25    assignment -> VARIABLE = NUMBER
Rule 26    assignment -> VARIABLE = [ sentence ]
Rule 27    modification -> VARIABLE [ factor ] = VARIABLE [ factor ]
Rule 28    modification -> VARIABLE [ factor ] = VARIABLE
Rule 29    operation -> VARIABLE = expression
Rule 30    operation -> VARIABLE + +
Rule 31    expression -> expression + term
Rule 32    expression -> expression - term
Rule 33    expression -> term
Rule 34    expression -> VARIABLE [ factor ]
Rule 35    expression -> LEN ( term )
Rule 36    term -> term * factor
Rule 37    term -> term / factor
Rule 38    term -> term / / factor
Rule 39    term -> factor
Rule 40    factor -> VARIABLE
Rule 41    factor -> ( expression )
Rule 42    factor -> NUMBER
Rule 43    print -> PRINT ( sentence )
Rule 44    sentence -> word , sentence
Rule 45    sentence -> word
Rule 46    word -> NUMBER
Rule 47    word -> VARIABLE

Terminals, with rules where they appear

(                    : 14 22 23 23 24 35 41 43
)                    : 14 22 23 23 24 35 41 43
*                    : 36
+                    : 30 30 31
,                    : 44
-                    : 32
/                    : 37 38 38
;                    : 14 14
<                    : 16 18 19 21
=                    : 19 25 26 27 28 29
>                    : 15 17 20
BREAK                : 12 13
ELIF                 : 23
ELSE                 : 23
FOR                  : 14
IF                   : 22 23
LEN                  : 35
NUMBER               : 17 18 25 42 46
PRINT                : 43
VARIABLE             : 15 15 16 16 17 18 19 19 20 20 21 21 25 26 27 27 28 28 29 30 34 40 47
WHILE                : 24
[                    : 20 21 26 27 27 28 34
]                    : 20 21 26 27 27 28 34
error                : 
{                    : 14 22 23 23 23 24
}                    : 14 22 23 23 23 24

Nonterminals, with rules where they appear

assignment           : 4
break                : 11
condition            : 14 22 23 23 24
expression           : 29 31 32 41
factor               : 20 21 27 27 28 34 36 37 38 39
for                  : 10
iF                   : 8
modification         : 7
operation            : 5 14 14
print                : 6
program              : 0
sentence             : 26 43 44
statement            : 2 3
statements           : 1 2 12 14 22 23 23 23 24
term                 : 31 32 33 35 36 37 38
whilE                : 9
word                 : 44 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . modification
    (8) statement -> . iF
    (9) statement -> . whilE
    (10) statement -> . for
    (11) statement -> . break
    (25) assignment -> . VARIABLE = NUMBER
    (26) assignment -> . VARIABLE = [ sentence ]
    (29) operation -> . VARIABLE = expression
    (30) operation -> . VARIABLE + +
    (43) print -> . PRINT ( sentence )
    (27) modification -> . VARIABLE [ factor ] = VARIABLE [ factor ]
    (28) modification -> . VARIABLE [ factor ] = VARIABLE
    (22) iF -> . IF ( condition ) { statements }
    (23) iF -> . IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (24) whilE -> . WHILE ( condition ) { statements }
    (14) for -> . FOR ( operation ; condition ; operation ) { statements }
    (12) break -> . BREAK statements
    (13) break -> . BREAK

    VARIABLE        shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    BREAK           shift and go to state 17

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    modification                   shift and go to state 7
    iF                             shift and go to state 8
    whilE                          shift and go to state 9
    for                            shift and go to state 10
    break                          shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . modification
    (8) statement -> . iF
    (9) statement -> . whilE
    (10) statement -> . for
    (11) statement -> . break
    (25) assignment -> . VARIABLE = NUMBER
    (26) assignment -> . VARIABLE = [ sentence ]
    (29) operation -> . VARIABLE = expression
    (30) operation -> . VARIABLE + +
    (43) print -> . PRINT ( sentence )
    (27) modification -> . VARIABLE [ factor ] = VARIABLE [ factor ]
    (28) modification -> . VARIABLE [ factor ] = VARIABLE
    (22) iF -> . IF ( condition ) { statements }
    (23) iF -> . IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (24) whilE -> . WHILE ( condition ) { statements }
    (14) for -> . FOR ( operation ; condition ; operation ) { statements }
    (12) break -> . BREAK statements
    (13) break -> . BREAK

    $end            reduce using rule 1 (program -> statements .)
    VARIABLE        shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    BREAK           shift and go to state 17

    statement                      shift and go to state 18
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    modification                   shift and go to state 7
    iF                             shift and go to state 8
    whilE                          shift and go to state 9
    for                            shift and go to state 10
    break                          shift and go to state 11

state 3

    (3) statements -> statement .

    VARIABLE        reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    }               reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    VARIABLE        reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    }               reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> operation .

    VARIABLE        reduce using rule 5 (statement -> operation .)
    PRINT           reduce using rule 5 (statement -> operation .)
    IF              reduce using rule 5 (statement -> operation .)
    WHILE           reduce using rule 5 (statement -> operation .)
    FOR             reduce using rule 5 (statement -> operation .)
    BREAK           reduce using rule 5 (statement -> operation .)
    $end            reduce using rule 5 (statement -> operation .)
    }               reduce using rule 5 (statement -> operation .)


state 6

    (6) statement -> print .

    VARIABLE        reduce using rule 6 (statement -> print .)
    PRINT           reduce using rule 6 (statement -> print .)
    IF              reduce using rule 6 (statement -> print .)
    WHILE           reduce using rule 6 (statement -> print .)
    FOR             reduce using rule 6 (statement -> print .)
    BREAK           reduce using rule 6 (statement -> print .)
    $end            reduce using rule 6 (statement -> print .)
    }               reduce using rule 6 (statement -> print .)


state 7

    (7) statement -> modification .

    VARIABLE        reduce using rule 7 (statement -> modification .)
    PRINT           reduce using rule 7 (statement -> modification .)
    IF              reduce using rule 7 (statement -> modification .)
    WHILE           reduce using rule 7 (statement -> modification .)
    FOR             reduce using rule 7 (statement -> modification .)
    BREAK           reduce using rule 7 (statement -> modification .)
    $end            reduce using rule 7 (statement -> modification .)
    }               reduce using rule 7 (statement -> modification .)


state 8

    (8) statement -> iF .

    VARIABLE        reduce using rule 8 (statement -> iF .)
    PRINT           reduce using rule 8 (statement -> iF .)
    IF              reduce using rule 8 (statement -> iF .)
    WHILE           reduce using rule 8 (statement -> iF .)
    FOR             reduce using rule 8 (statement -> iF .)
    BREAK           reduce using rule 8 (statement -> iF .)
    $end            reduce using rule 8 (statement -> iF .)
    }               reduce using rule 8 (statement -> iF .)


state 9

    (9) statement -> whilE .

    VARIABLE        reduce using rule 9 (statement -> whilE .)
    PRINT           reduce using rule 9 (statement -> whilE .)
    IF              reduce using rule 9 (statement -> whilE .)
    WHILE           reduce using rule 9 (statement -> whilE .)
    FOR             reduce using rule 9 (statement -> whilE .)
    BREAK           reduce using rule 9 (statement -> whilE .)
    $end            reduce using rule 9 (statement -> whilE .)
    }               reduce using rule 9 (statement -> whilE .)


state 10

    (10) statement -> for .

    VARIABLE        reduce using rule 10 (statement -> for .)
    PRINT           reduce using rule 10 (statement -> for .)
    IF              reduce using rule 10 (statement -> for .)
    WHILE           reduce using rule 10 (statement -> for .)
    FOR             reduce using rule 10 (statement -> for .)
    BREAK           reduce using rule 10 (statement -> for .)
    $end            reduce using rule 10 (statement -> for .)
    }               reduce using rule 10 (statement -> for .)


state 11

    (11) statement -> break .

    VARIABLE        reduce using rule 11 (statement -> break .)
    PRINT           reduce using rule 11 (statement -> break .)
    IF              reduce using rule 11 (statement -> break .)
    WHILE           reduce using rule 11 (statement -> break .)
    FOR             reduce using rule 11 (statement -> break .)
    BREAK           reduce using rule 11 (statement -> break .)
    $end            reduce using rule 11 (statement -> break .)
    }               reduce using rule 11 (statement -> break .)


state 12

    (25) assignment -> VARIABLE . = NUMBER
    (26) assignment -> VARIABLE . = [ sentence ]
    (29) operation -> VARIABLE . = expression
    (30) operation -> VARIABLE . + +
    (27) modification -> VARIABLE . [ factor ] = VARIABLE [ factor ]
    (28) modification -> VARIABLE . [ factor ] = VARIABLE

    =               shift and go to state 19
    +               shift and go to state 21
    [               shift and go to state 20


state 13

    (43) print -> PRINT . ( sentence )

    (               shift and go to state 22


state 14

    (22) iF -> IF . ( condition ) { statements }
    (23) iF -> IF . ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }

    (               shift and go to state 23


state 15

    (24) whilE -> WHILE . ( condition ) { statements }

    (               shift and go to state 24


state 16

    (14) for -> FOR . ( operation ; condition ; operation ) { statements }

    (               shift and go to state 25


state 17

    (12) break -> BREAK . statements
    (13) break -> BREAK .
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . modification
    (8) statement -> . iF
    (9) statement -> . whilE
    (10) statement -> . for
    (11) statement -> . break
    (25) assignment -> . VARIABLE = NUMBER
    (26) assignment -> . VARIABLE = [ sentence ]
    (29) operation -> . VARIABLE = expression
    (30) operation -> . VARIABLE + +
    (43) print -> . PRINT ( sentence )
    (27) modification -> . VARIABLE [ factor ] = VARIABLE [ factor ]
    (28) modification -> . VARIABLE [ factor ] = VARIABLE
    (22) iF -> . IF ( condition ) { statements }
    (23) iF -> . IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (24) whilE -> . WHILE ( condition ) { statements }
    (14) for -> . FOR ( operation ; condition ; operation ) { statements }
    (12) break -> . BREAK statements
    (13) break -> . BREAK

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
    $end            reduce using rule 13 (break -> BREAK .)
    }               reduce using rule 13 (break -> BREAK .)
    VARIABLE        shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    BREAK           shift and go to state 17

  ! VARIABLE        [ reduce using rule 13 (break -> BREAK .) ]
  ! PRINT           [ reduce using rule 13 (break -> BREAK .) ]
  ! IF              [ reduce using rule 13 (break -> BREAK .) ]
  ! WHILE           [ reduce using rule 13 (break -> BREAK .) ]
  ! FOR             [ reduce using rule 13 (break -> BREAK .) ]
  ! BREAK           [ reduce using rule 13 (break -> BREAK .) ]

    statements                     shift and go to state 26
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    modification                   shift and go to state 7
    iF                             shift and go to state 8
    whilE                          shift and go to state 9
    for                            shift and go to state 10
    break                          shift and go to state 11

state 18

    (2) statements -> statements statement .

    VARIABLE        reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    BREAK           reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    }               reduce using rule 2 (statements -> statements statement .)


state 19

    (25) assignment -> VARIABLE = . NUMBER
    (26) assignment -> VARIABLE = . [ sentence ]
    (29) operation -> VARIABLE = . expression
    (31) expression -> . expression + term
    (32) expression -> . expression - term
    (33) expression -> . term
    (34) expression -> . VARIABLE [ factor ]
    (35) expression -> . LEN ( term )
    (36) term -> . term * factor
    (37) term -> . term / factor
    (38) term -> . term / / factor
    (39) term -> . factor
    (40) factor -> . VARIABLE
    (41) factor -> . ( expression )
    (42) factor -> . NUMBER

    NUMBER          shift and go to state 28
    [               shift and go to state 29
    VARIABLE        shift and go to state 27
    LEN             shift and go to state 33
    (               shift and go to state 34

    expression                     shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 32

state 20

    (27) modification -> VARIABLE [ . factor ] = VARIABLE [ factor ]
    (28) modification -> VARIABLE [ . factor ] = VARIABLE
    (40) factor -> . VARIABLE
    (41) factor -> . ( expression )
    (42) factor -> . NUMBER

    VARIABLE        shift and go to state 35
    (               shift and go to state 34
    NUMBER          shift and go to state 37

    factor                         shift and go to state 36

state 21

    (30) operation -> VARIABLE + . +

    +               shift and go to state 38


state 22

    (43) print -> PRINT ( . sentence )
    (44) sentence -> . word , sentence
    (45) sentence -> . word
    (46) word -> . NUMBER
    (47) word -> . VARIABLE

    NUMBER          shift and go to state 41
    VARIABLE        shift and go to state 42

    sentence                       shift and go to state 39
    word                           shift and go to state 40

state 23

    (22) iF -> IF ( . condition ) { statements }
    (23) iF -> IF ( . condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (15) condition -> . VARIABLE > VARIABLE
    (16) condition -> . VARIABLE < VARIABLE
    (17) condition -> . VARIABLE > NUMBER
    (18) condition -> . VARIABLE < NUMBER
    (19) condition -> . VARIABLE < = VARIABLE
    (20) condition -> . VARIABLE [ factor ] > VARIABLE
    (21) condition -> . VARIABLE [ factor ] < VARIABLE

    VARIABLE        shift and go to state 44

    condition                      shift and go to state 43

state 24

    (24) whilE -> WHILE ( . condition ) { statements }
    (15) condition -> . VARIABLE > VARIABLE
    (16) condition -> . VARIABLE < VARIABLE
    (17) condition -> . VARIABLE > NUMBER
    (18) condition -> . VARIABLE < NUMBER
    (19) condition -> . VARIABLE < = VARIABLE
    (20) condition -> . VARIABLE [ factor ] > VARIABLE
    (21) condition -> . VARIABLE [ factor ] < VARIABLE

    VARIABLE        shift and go to state 44

    condition                      shift and go to state 45

state 25

    (14) for -> FOR ( . operation ; condition ; operation ) { statements }
    (29) operation -> . VARIABLE = expression
    (30) operation -> . VARIABLE + +

    VARIABLE        shift and go to state 47

    operation                      shift and go to state 46

state 26

    (12) break -> BREAK statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . operation
    (6) statement -> . print
    (7) statement -> . modification
    (8) statement -> . iF
    (9) statement -> . whilE
    (10) statement -> . for
    (11) statement -> . break
    (25) assignment -> . VARIABLE = NUMBER
    (26) assignment -> . VARIABLE = [ sentence ]
    (29) operation -> . VARIABLE = expression
    (30) operation -> . VARIABLE + +
    (43) print -> . PRINT ( sentence )
    (27) modification -> . VARIABLE [ factor ] = VARIABLE [ factor ]
    (28) modification -> . VARIABLE [ factor ] = VARIABLE
    (22) iF -> . IF ( condition ) { statements }
    (23) iF -> . IF ( condition ) { statements } ELIF ( condition ) { statements } ELSE { statements }
    (24) whilE -> . WHILE ( condition ) { statements }
    (14) for -> . FOR ( operation ; condition ; operation ) { statements }
    (12) break -> . BREAK statements
    (13) break -> . BREAK

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
    $end            reduce using rule 12 (break -> BREAK statements .)
    }               reduce using rule 12 (break -> BREAK statements .)
    VARIABLE        shift and go to state 12
    PRINT           shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    BREAK           shift and go to state 17

  ! VARIABLE        [ reduce using rule 12 (break -> BREAK statements .) ]
  ! PRINT           [ reduce using rule 12 (break -> BREAK statements .) ]
  ! IF              [ reduce using rule 12 (break -> BREAK statements .) ]
  ! WHILE           [ reduce using rule 12 (break -> BREAK statements .) ]
  ! FOR             [ reduce using rule 12 (break -> BREAK statements .) ]
  ! BREAK           [ reduce using rule 12 (break -> BREAK statements .) ]

    statement                      shift and go to state 18
    assignment                     shift and go to state 4
    operation                      shift and go to state 5
    print                          shift and go to state 6
    modification                   shift and go to state 7
    iF                             shift and go to state 8
    whilE                          shift and go to state 9
    for                            shift and go to state 10
    break                          shift and go to state 11

state 27

    (34) expression -> VARIABLE . [ factor ]
    (40) factor -> VARIABLE .

    [               shift and go to state 48
    *               reduce using rule 40 (factor -> VARIABLE .)
    /               reduce using rule 40 (factor -> VARIABLE .)
    +               reduce using rule 40 (factor -> VARIABLE .)
    -               reduce using rule 40 (factor -> VARIABLE .)
    VARIABLE        reduce using rule 40 (factor -> VARIABLE .)
    PRINT           reduce using rule 40 (factor -> VARIABLE .)
    IF              reduce using rule 40 (factor -> VARIABLE .)
    WHILE           reduce using rule 40 (factor -> VARIABLE .)
    FOR             reduce using rule 40 (factor -> VARIABLE .)
    BREAK           reduce using rule 40 (factor -> VARIABLE .)
    $end            reduce using rule 40 (factor -> VARIABLE .)
    }               reduce using rule 40 (factor -> VARIABLE .)
    )               reduce using rule 40 (factor -> VARIABLE .)
    ;               reduce using rule 40 (factor -> VARIABLE .)


state 28

    (25) assignment -> VARIABLE = NUMBER .
    (42) factor -> NUMBER .

  ! reduce/reduce conflict for VARIABLE resolved using rule 25 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for PRINT resolved using rule 25 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for IF resolved using rule 25 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for WHILE resolved using rule 25 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for FOR resolved using rule 25 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for BREAK resolved using rule 25 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for $end resolved using rule 25 (assignment -> VARIABLE = NUMBER .)
  ! reduce/reduce conflict for } resolved using rule 25 (assignment -> VARIABLE = NUMBER .)
    VARIABLE        reduce using rule 25 (assignment -> VARIABLE = NUMBER .)
    PRINT           reduce using rule 25 (assignment -> VARIABLE = NUMBER .)
    IF              reduce using rule 25 (assignment -> VARIABLE = NUMBER .)
    WHILE           reduce using rule 25 (assignment -> VARIABLE = NUMBER .)
    FOR             reduce using rule 25 (assignment -> VARIABLE = NUMBER .)
    BREAK           reduce using rule 25 (assignment -> VARIABLE = NUMBER .)
    $end            reduce using rule 25 (assignment -> VARIABLE = NUMBER .)
    }               reduce using rule 25 (assignment -> VARIABLE = NUMBER .)
    *               reduce using rule 42 (factor -> NUMBER .)
    /               reduce using rule 42 (factor -> NUMBER .)
    +               reduce using rule 42 (factor -> NUMBER .)
    -               reduce using rule 42 (factor -> NUMBER .)

  ! VARIABLE        [ reduce using rule 42 (factor -> NUMBER .) ]
  ! PRINT           [ reduce using rule 42 (factor -> NUMBER .) ]
  ! IF              [ reduce using rule 42 (factor -> NUMBER .) ]
  ! WHILE           [ reduce using rule 42 (factor -> NUMBER .) ]
  ! FOR             [ reduce using rule 42 (factor -> NUMBER .) ]
  ! BREAK           [ reduce using rule 42 (factor -> NUMBER .) ]
  ! $end            [ reduce using rule 42 (factor -> NUMBER .) ]
  ! }               [ reduce using rule 42 (factor -> NUMBER .) ]


state 29

    (26) assignment -> VARIABLE = [ . sentence ]
    (44) sentence -> . word , sentence
    (45) sentence -> . word
    (46) word -> . NUMBER
    (47) word -> . VARIABLE

    NUMBER          shift and go to state 41
    VARIABLE        shift and go to state 42

    sentence                       shift and go to state 49
    word                           shift and go to state 40

state 30

    (29) operation -> VARIABLE = expression .
    (31) expression -> expression . + term
    (32) expression -> expression . - term

    VARIABLE        reduce using rule 29 (operation -> VARIABLE = expression .)
    PRINT           reduce using rule 29 (operation -> VARIABLE = expression .)
    IF              reduce using rule 29 (operation -> VARIABLE = expression .)
    WHILE           reduce using rule 29 (operation -> VARIABLE = expression .)
    FOR             reduce using rule 29 (operation -> VARIABLE = expression .)
    BREAK           reduce using rule 29 (operation -> VARIABLE = expression .)
    $end            reduce using rule 29 (operation -> VARIABLE = expression .)
    }               reduce using rule 29 (operation -> VARIABLE = expression .)
    ;               reduce using rule 29 (operation -> VARIABLE = expression .)
    )               reduce using rule 29 (operation -> VARIABLE = expression .)
    +               shift and go to state 50
    -               shift and go to state 51


state 31

    (33) expression -> term .
    (36) term -> term . * factor
    (37) term -> term . / factor
    (38) term -> term . / / factor

    +               reduce using rule 33 (expression -> term .)
    -               reduce using rule 33 (expression -> term .)
    VARIABLE        reduce using rule 33 (expression -> term .)
    PRINT           reduce using rule 33 (expression -> term .)
    IF              reduce using rule 33 (expression -> term .)
    WHILE           reduce using rule 33 (expression -> term .)
    FOR             reduce using rule 33 (expression -> term .)
    BREAK           reduce using rule 33 (expression -> term .)
    $end            reduce using rule 33 (expression -> term .)
    }               reduce using rule 33 (expression -> term .)
    )               reduce using rule 33 (expression -> term .)
    ;               reduce using rule 33 (expression -> term .)
    *               shift and go to state 52
    /               shift and go to state 53


state 32

    (39) term -> factor .
